# opengl-renderer

./: .gitignore  CMakeLists.txt
shaders/: basic.frag  basic.vert  lit.frag  lit.vert
src/: OrbitCamera.h  Shader.cpp  Shader.h  main.cpp
